# outreachai

./: .dockerignore  Dockerfile  README.md  docker-compose.python.yml  docker-compose.yml  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py  prompts.py
backend/app/data/: mock_responses.py  patients.py
backend/app/llm/: __init__.py  claude.py  gemini.py
backend/app/routers/: generate.py
backend/tests/: test_endpoint.py  test_llm.py  test_mock_responses.py  test_models.py  test_patients.py  test_prompts.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/generate/: route.test.ts  route.ts
src/components/: campaign-view.test.tsx  campaign-view.tsx  message-output.test.tsx  message-output.tsx  mobile-controls-drawer.tsx  outreach-controls.test.tsx  outreach-controls.tsx  patient-card.test.tsx  patient-card.tsx  patient-select.tsx
src/components/layout/: footer.tsx  header.tsx
src/lib/: api.test.ts  api.ts  env.ts  schemas.ts  types.ts
src/lib/data/: mock-responses.json  mock-responses.test.ts  mock-responses.ts  patients.test.ts  patients.ts
src/lib/llm/: claude-stream.ts  claude.ts  gemini-stream.ts  gemini.ts  index.test.ts  index.ts
src/lib/prompts/: outreach.test.ts  outreach.ts
src/lib/utils/: format.test.ts  format.ts
